--- a/theme/main.html
+++ b/theme/main.html
@@ -9,3 +9,14 @@
     </div>
   {% endif %}
 {% endblock %}
+
+{% block htmltitle %}
+  {% if page and page.meta and page.meta.title %}
+    {# always show site suffix to avoid individual content pages needing to suffix #}
+    <title>{{ page.meta.title }} - {{ config.site_name }}</title>
+  {% elif page and page.title and not page.is_homepage %}
+    <title>{{ page.title }} - {{ config.site_name }}</title>
+  {% else %}
+    <title>{{ config.site_name }}</title>
+  {% endif %}
+{% endblock %}
